--- a/Systemet/Views/Uppgifter/UppgiftsSida.cshtml
+++ b/Systemet/Views/Uppgifter/UppgiftsSida.cshtml
@@ -77,6 +77,9 @@
             @Html.DisplayFor(model => Model.Item1.Ansvarig.FörNamn)  @Html.DisplayFor(model => Model.Item1.Ansvarig.EfterNamn)
             </p>
         </dd>
+
+
+        //här ska det komma en knapp när man har valt nåt i listan
         <dt>
             <input id="Submit1" type="submit" value="submit" />
         </dt>
