skapat en viewmodel till uppgiftssidan som funkar bra! det gör däremot inte dropdownlisten. får inget värde till controllern från den

--- a/Systemet/Views/Grupp/gruppsida.cshtml
+++ b/Systemet/Views/Grupp/gruppsida.cshtml
@@ -66,7 +66,7 @@
             <tr>
                 <td>
 
-                    <a href="@Url.Action("UppgiftsSida", "Uppgifter", new { idet = item.UppgifterID })" title="@item.UppgifterID">
+                    <a href="@Url.Action("UppgiftsSida2", "Uppgifter", new { idet = item.UppgifterID })" title="@item.UppgifterID">
                         @item.Namn
                     </a>
                 </td>
