--- a/Systemet/Views/Grupp/minagrupper.cshtml
+++ b/Systemet/Views/Grupp/minagrupper.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "minagrupper";
 }
 <ol class="breadcrumb">
-    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
+    <li>@Html.ActionLink("Startsidan", "inloggad", "Konto")</li>
     <li class="active">Mina Grupper</li>
 </ol>
 
