--- a/Systemet/Views/Evenemangs/evenemangssida.cshtml
+++ b/Systemet/Views/Evenemangs/evenemangssida.cshtml
@@ -7,9 +7,9 @@
 <link rel="stylesheet" type="text/css" href="~/Content/comments.css">
 
 <ol class="breadcrumb">
-    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
-    <li><a href="~/Views/Grupp/minagrupper.cshtml">Mina Grupper</a></li>
-    <li><a href="~/Views/Grupp/gruppsida.cshtml">Gruppsida</a></li>
+    <li>@Html.ActionLink("Startsidan", "inloggad", "Konto")</li>
+    <li>@Html.ActionLink("Alla mina grupper", "minagrupper", "Grupp")</li>
+    <li>@Html.ActionLink("Gruppens startsida", "gruppsida", "Grupp", new { Model.Item1.grupp.GruppNamn }, null)</li>
     <li class="active">Evenemang: @Model.Item1.Namn</li>
 </ol>
 
