--- a/Systemet/Views/Uppgifter/UppgiftsSida.cshtml
+++ b/Systemet/Views/Uppgifter/UppgiftsSida.cshtml
@@ -2,15 +2,16 @@
 
 @{
     ViewBag.Title = "UppgiftsSida";
+    TempData["användarID"] = Model.inloggad;
 }
-<ol class="breadcrumb">
-    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
-    <li><a href="~/Views/Grupp/minagrupper.cshtml">Mina Grupper</a></li>
-    <li><a href="~/Views/Grupp/gruppsida.cshtml">Gruppsida</a></li>
+<ol class="breadcrumb">    
+    <li>@Html.ActionLink("Startsidan", "inloggad", "Konto")</li>
+    <li>@Html.ActionLink("Alla mina grupper", "minagrupper", "Grupp")</li>
+    <li>@Html.ActionLink("Gruppens startsida", "gruppsida", "Grupp", new { Model.grupp.GruppNamn }, null)</li>
     <li class="active">Uppgift: @Model.uppgift.Namn</li>
 </ol>
 
-<h2>UppgiftsSida</h2>
+<h2>@Model.uppgift.Namn detaljer</h2>
 <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
 
 
@@ -30,17 +31,18 @@
     @Html.DisplayFor(model => Model.uppgift.Beskrivning)
 </dd>
 
-@using (Html.BeginForm("läggtillanvändaretilluppgift", "Uppgifter", FormMethod.Post))
+@if (Model.uppgift.Ansvarig == null)
 {
-    if (Model.uppgift.Ansvarig == null)
+
+    <dt>
+        @Html.DisplayNameFor(model => Model.uppgift.Ansvarig)
+    </dt>
+    <dd>
+        <p>Ingen har tagit på sig den här uppgiften än</p>
+    </dd>
+    if (Model.inloggad == Model.uppgift.TillhörGrupp.LedareID)
     {
-        <dt>
-            @Html.DisplayNameFor(model => Model.uppgift.Ansvarig)
-        </dt>
-        <dd>
-            <p>Ingen har tagit på sig den här uppgiften än</p>
-        </dd>
-        if (Convert.ToInt32(Session["AnvändarID"]) == Model.uppgift.TillhörGrupp.LedareID)
+        using (Html.BeginForm("läggtillanvändaretilluppgift", "Uppgifter", FormMethod.Post))
         {
             <dt>
             </dt>
@@ -51,30 +53,36 @@
                     @Html.DropDownListFor(m => m.användareID, Model.lemmar, "Välj", new { @class = "form-control", @id = "vald", @value = "AnvändarID", })
                 </div>
             </dd>
-        }
-        else
-        {
-            <dt>
-                @Html.Display("vill du ta det här?")
-            </dt>
-            <dd>
-                <div class="form-group">
-                    @Html.RadioButtonFor(m => m.användareID, ,  new { @class = "form-control", @id = "vald", @value = "AnvändarID", })
-                </div>
-            </dd>
+                <dt>
+                    <input type="submit" id="Submitknappen" value="Lägg till" />
+                </dt>
         }
     }
     else
     {
-        <div>
-            @{Html.RenderPartial("uppgiftssidapartial");}
-        </div>
+        <dt>
+            @Html.Display("vill du ta det här?")
+        </dt>
 
-                }
-                <dt>
-                    <input type="submit" id="Submitknappen" value="Lägg till" />
-                </dt>
-                }
+        using (Html.BeginForm("tapåsiguppgift", "Uppgifter", FormMethod.Post))
+        {
+            @Html.HiddenFor(model => model.grupp.GruppID)
+            @Html.HiddenFor(model => model.uppgift.UppgifterID)
+            @Html.HiddenFor(m => m.inloggad)
+            <div class="container-fluid">
+                <input type="submit" id="knappen" value="Ja, jag fixar det!" class="btn btn-lg btn-danger" />
+            </div>
+        }
+    }
+}
+else
+{
+    <div>
+    @{ Html.RenderPartial("uppgiftssidapartial");}
+    </div>
+}
+
+            
 
 <dd>
     @Html.ActionLink("Edit", "Edit", new { id = Model.uppgift.UppgifterID }) |
